--- a/index.html
+++ b/index.html
@@ -1,46 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movies Search</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" type="text/javascript"></script>
-</head>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
+      type="text/javascript"
+    ></script>
+    <link rel="stylesheet" href="./styles/main.css" />
+  </head>
 
-<body>
-    <h1>Movies Search</h1>
-    <form action="" id="form">
-        <label for="selectGenres">Choose your Genre:</label>
+  <body>
+    <section class="site-search">
+      <h1 class="site-search__heading">Movies Search</h1>
+      <form action="" id="site-search__form">
+        <label class="form-label" for="selectGenres">Choose your Genre:</label>
         <select class="selectGenres" name="" id="selectGenres">
-            <option value=""></option>
-            <option value="Action">Action</option>
-            <option value="Adventure">Adventure</option>
-            <option value="Animation">Animation</option>
-            <option value="Comedy">Comedy</option>
-            <option value="Crime">Crime</option>
-            <option value="Documentary">Documentary</option>
-            <option value="Drama">Drama</option>
-            <option value="Family">Family</option>
-            <option value="Fantasy">Fantasy</option>
-            <option value="History">History</option>
-            <option value="Horror">Horror</option>
-            <option value="Music">Music</option>
-            <option value="Mystery">Mystery</option>
-            <option value="Romance">Romance</option>
-            <option value="Science Fiction">Science Fiction</option>
-            <option value="TV Movie">TV Movie</option>
-            <option value="Thriller">Thriller</option>
-            <option value="War">War</option>
-            <option value="Western">Western</option>
+          <option value=""></option>
+          <option value="Action">Action</option>
+          <option value="Adventure">Adventure</option>
+          <option value="Animation">Animation</option>
+          <option value="Comedy">Comedy</option>
+          <option value="Crime">Crime</option>
+          <option value="Documentary">Documentary</option>
+          <option value="Drama">Drama</option>
+          <option value="Family">Family</option>
+          <option value="Fantasy">Fantasy</option>
+          <option value="History">History</option>
+          <option value="Horror">Horror</option>
+          <option value="Music">Music</option>
+          <option value="Mystery">Mystery</option>
+          <option value="Romance">Romance</option>
+          <option value="Science Fiction">Science Fiction</option>
+          <option value="TV Movie">TV Movie</option>
+          <option value="Thriller">Thriller</option>
+          <option value="War">War</option>
+          <option value="Western">Western</option>
         </select>
-        <button id="button" type="submit">Find</button>
-    </form>
-    <ul class="movies">
-    </ul>
+        <br />
+        <label class="form-label" for="selectLanguage"
+          >Choose your Language:</label
+        >
+        <select name="" id="selectLanguage" class="selectLanguage">
+          <option value=""></option>
+          <option value="en">English</option>
+          <option value="ja">Japanese</option>
+          <option value="ru">Russian</option>
+          <option value="hi">Hindi</option>
+          <option value="it">Italian</option>
+          <option value="es">Spanish</option>
+          <option value="nl">Dutch</option>
+          <option value="fr">French</option>
+          <option value="zh">Chinese</option>
+        </select>
+      </form>
+      <button id="button" type="submit">Find</button>
+    </section>
+    <section class="site-movies">
+      <ul class="site-movies__list">
+        <li class="site-movies__item">
+          <div class="item-card">
+            <img class="item-card__img" src="" alt="" />
+            <p class="item-card__name"></p>
+            <p class="item-card__date"></p>
+          </div>
+        </li>
+      </ul>
+    </section>
+
     <script src="script.js" type="text/javascript"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-</body>
-
+  </body>
 </html>
