--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movies Search</title>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
-      type="text/javascript"
-    ></script>
-    <link rel="stylesheet" href="./styles/main.css" />
-  </head>
+    <!-- add icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/19dc0097e6.js" crossorigin="anonymous"></script>
 
-  <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./styles/main.css" />
+</head>
+
+<body>
     <section class="site-search">
-      <h1 class="site-search__heading">Movies Search</h1>
-      <form action="" id="site-search__form">
-        <label class="form-label" for="selectGenres">Choose your Genre:</label>
-        <select class="selectGenres" name="" id="selectGenres">
+        <h1 class="site-search__heading">Movies Search</h1>
+        <form action="" id="site-search__form">
+            <label class="form-label" for="selectGenres">Choose your Genre:</label>
+            <select class="selectGenres" name="" id="selectGenres">
           <option value=""></option>
           <option value="Action">Action</option>
           <option value="Adventure">Adventure</option>
@@ -38,11 +40,9 @@
           <option value="War">War</option>
           <option value="Western">Western</option>
         </select>
-        <br />
-        <label class="form-label" for="selectLanguage"
-          >Choose your Language:</label
-        >
-        <select name="" id="selectLanguage" class="selectLanguage">
+            <br />
+            <label class="form-label" for="selectLanguage">Choose your Language:</label>
+            <select name="" id="selectLanguage" class="selectLanguage">
           <option value=""></option>
           <option value="en">English</option>
           <option value="ja">Japanese</option>
@@ -54,22 +54,23 @@
           <option value="fr">French</option>
           <option value="zh">Chinese</option>
         </select>
-      </form>
-      <button id="button" type="submit">Find</button>
+        </form>
+        <button id="button" type="submit">Search</button>
     </section>
     <section class="site-movies">
-      <ul class="site-movies__list">
-        <li class="site-movies__item">
-          <div class="item-card">
-            <img class="item-card__img" src="" alt="" />
-            <p class="item-card__name"></p>
-            <p class="item-card__date"></p>
-          </div>
-        </li>
-      </ul>
+        <ul class="site-movies__list">
+            <li class="site-movies__item">
+                <div class="item-card">
+                    <img class="item-card__img" src="" alt="" />
+                    <p class="item-card__name"></p>
+                    <p class="item-card__date"></p>
+                </div>
+            </li>
+        </ul>
     </section>
 
     <script src="script.js" type="text/javascript"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  </body>
+</body>
+
 </html>
