--- a/index.html
+++ b/index.html
@@ -1,82 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./camera.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./camera.png" />
     <title>Movies Search</title>
     <!-- add icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://kit.fontawesome.com/19dc0097e6.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/19dc0097e6.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" type="text/javascript"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
+      type="text/javascript"
+    ></script>
     <link rel="stylesheet" href="./styles/main.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="site-search">
-        <section class="site-search__navbar">
-            <a href="index.html"> <img class="site-search__site-logo" src="./camera.png" alt="movies logo"></a>
-            <h1 class="site-search__heading">Movies Search</h1>
-        </section>
-        <section class="site-search__form">
-            <form action="" id="site-search__form">
-                <label class="form-label" for="selectGenres">Genre:</label>
-                <select class="selectGenres" name="" id="selectGenres">
-                    <option value=""></option>
-                    <option value="Action">Action</option>
-                    <option value="Adventure">Adventure</option>
-                    <option value="Animation">Animation</option>
-                    <option value="Comedy">Comedy</option>
-                    <option value="Crime">Crime</option>
-                    <option value="Documentary">Documentary</option>
-                    <option value="Drama">Drama</option>
-                    <option value="Family">Family</option>
-                    <option value="Fantasy">Fantasy</option>
-                    <option value="History">History</option>
-                    <option value="Horror">Horror</option>
-                    <option value="Music">Music</option>
-                    <option value="Mystery">Mystery</option>
-                    <option value="Romance">Romance</option>
-                    <option value="Science Fiction">Science Fiction</option>
-                    <option value="TV Movie">TV Movie</option>
-                    <option value="Thriller">Thriller</option>
-                    <option value="War">War</option>
-                    <option value="Western">Western</option>
-                 </select>
-                <label class="form-label" for="selectLanguage">Language:</label>
-                <select name="" id="selectLanguage" class="selectLanguage">
-              <option value=""></option>
-              <option value="en">English</option>
-              <option value="ja">Japanese</option>
-              <option value="ru">Russian</option>
-              <option value="hi">Hindi</option>
-              <option value="it">Italian</option>
-              <option value="es">Spanish</option>
-              <option value="nl">Dutch</option>
-              <option value="fr">French</option>
-              <option value="zh">Chinese</option>
-            </select>
-            </form>
-            <button id="button" type="submit">Search</button>
-        </section>
+      <section class="site-search__navbar">
+        <a href="index.html">
+          <img
+            class="site-search__site-logo"
+            src="./camera.png"
+            alt="movies logo"
+        /></a>
+        <h1 class="site-search__heading">Movies Search</h1>
+      </section>
+      <section class="site-search__form">
+        <form action="" id="site-search__form">
+          <label class="form-label" for="selectGenres">Genre:</label>
+          <select class="selectGenres" name="" id="selectGenres">
+            <option value=""></option>
+            <option value="Action">Action</option>
+            <option value="Adventure">Adventure</option>
+            <option value="Animation">Animation</option>
+            <option value="Comedy">Comedy</option>
+            <option value="Crime">Crime</option>
+            <option value="Documentary">Documentary</option>
+            <option value="Drama">Drama</option>
+            <option value="Family">Family</option>
+            <option value="Fantasy">Fantasy</option>
+            <option value="History">History</option>
+            <option value="Horror">Horror</option>
+            <option value="Music">Music</option>
+            <option value="Mystery">Mystery</option>
+            <option value="Romance">Romance</option>
+            <option value="Science Fiction">Science Fiction</option>
+            <option value="TV Movie">TV Movie</option>
+            <option value="Thriller">Thriller</option>
+            <option value="War">War</option>
+            <option value="Western">Western</option>
+          </select>
+          <label class="form-label" for="selectLanguage">Language:</label>
+          <select name="" id="selectLanguage" class="selectLanguage">
+            <option value=""></option>
+            <option value="en">English</option>
+            <option value="ja">Japanese</option>
+            <option value="ru">Russian</option>
+            <option value="hi">Hindi</option>
+            <option value="it">Italian</option>
+            <option value="es">Spanish</option>
+            <option value="nl">Dutch</option>
+            <option value="fr">French</option>
+            <option value="zh">Chinese</option>
+          </select>
+        </form>
+        <button id="button" type="submit">Search</button>
+      </section>
     </header>
     <main class="wrapper">
-        <section class="site-movies">
-            <ul class="site-movies__list">
-                <!-- populate via js -->
-            </ul>
-        </section>
+      <section class="site-movies">
+        <ul class="site-movies__list">
+          <!-- populate via js -->
+        </ul>
+      </section>
     </main>
 
     <footer>
-        <div>Tamara Carlos</div>
-        <div>Chris Nguyen</div>
-        <div>Yik Tung</div>
+      <div>Tamara Carlos</div>
+      <div>Chris Nguyen</div>
+      <div>Yik Tung</div>
     </footer>
     <script src="script.js" type="text/javascript"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-</body>
-
+  </body>
 </html>
